# RLProject

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: python-tests.yml
docs/: 00_setup.md
docs/atari/: assignment.md
docs/omok/: assignment.md
docs/pykachu/: notes.md
projects/atari_dqn/: __init__.py  eval.py  train.py
projects/atari_dqn/config/: dqn.yml
projects/minecraft/: eval.py
projects/omok/: __init__.py  eval.py  selfplay.py  train.py
projects/omok/agents/: __init__.py  heuristic_agent.py  random_agent.py
projects/omok/envs/: __init__.py  omok_env.py
projects/pykachu_volleyball/: __init__.py  eval.py  play_random.py  train.py
projects/pykachu_volleyball/env/: __init__.py  pykachu_env.py
tests/: test_envs.py
