[project]
name = "rlproject"
version = "0.1.0"
description = "Placeholder RL study tracks for Atari, Pykachu volleyball, and Omok."
authors = ["leesangoh <todo@example.com>"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "gymnasium>=0.29.0",
  "numpy>=1.26.0",
  "torch>=2.1.0",
  "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
